<resources>
    <string name="app_name">TVHClient</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="intro_overlay_text">Touch to cast Live TV or recordings to your TV\n\nPlease check that you meet the requirements described in the casting settings.</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="cast_profile_not_set">No casting profile was selected in the settings. This is required before casting can be used.</string>
    <string name="cast_profile_invalid">The selected profile \'%1$s\' is not the recommended \'%2$s\' profile. Please note that casting might not work correctly.</string>
    <string name="error_loading_json_data">Could not load data required for casting from the server. Please check if your connection is working and port 9981 is reachable.</string>
    <string name="error_parsing_json_data">Could not parse received data from the server. Please send a debug log to the developer.</string>
    <string name="error_no_channel_info_in_json_data">Could not find the channel information required for casting.</string>
    <string name="proceed">Proceed</string>
    <string name="pref_casting">Casting</string>
    <string name="pref_casting_sum">Settings to enable and configure casting Live-TV or recordings to your TV. Please note that this requires tvheadend with transcoding enabled and a server which is powerful enough to transcode the data in realtime.</string>
    <string name="pref_enable_casting">Enable casting</string>
    <string name="pref_enable_casting_sum">Only enable this feature if tvheadend is able to transcode and your server is powerful enough to convert the data in realtime.</string>
    <string name="pref_show_cast_minicontroller">Cast controls</string>
    <string name="pref_show_cast_minicontroller_sum">Show a cast minicontroller at the bottom of the screen to display some information about the current cast.</string>
    <string name="download_error_insufficient_space">Error downloading the recording \'%s\'. Not sufficient space on the device.</string>
    <string name="download_error_authentication_required">Error downloading the recording \'%s\'. Authentication not correct or missing.</string>
    <string name="no_external_storage_available">External storage is not available or read only.</string>
    <string name="loading_casting_data">Loading required casting data from server&#8230;</string>
    <string name="parsing_casting_data">Processing received data&#8230;</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="tags">Tags</string>
    <string name="play">Play</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="record_once">Record</string>
    <string name="record_once_custom_profile">Record with different profile</string>
    <string name="record_series">Record as series recording</string>
    <string name="record_cancel">Cancel recording</string>
    <string name="record_cancel_all">Cancel all recordings</string>
    <string name="confirm_cancel_all">Are you sure you want to cancel all recordings?</string>
    <string name="record_remove">Remove recording</string>
    <string name="record_remove_all">Remove all recordings</string>
    <string name="confirm_remove_all">Are you sure you want to remove all recordings?</string>
    <string name="record_edit">Edit recording</string>
    <string name="search_imdb">Search on IMDB</string>
    <string name="search_epg">Search the program guide</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="set_active">Activate</string>
    <string name="set_not_active">Deactivate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="connections">Connections</string>
    <string name="timeframe">Timeframe</string>
    <string name="genre_color_info">Explain genre colors</string>
    <string name="send_wol">Wake up</string>
    <string name="select_connection">Select connection</string>
    <string name="add_connection">Add connection</string>
    <string name="edit_connection">Edit connection</string>
    <string name="confirm_cancel">Do you really want to cancel? All changes will be discarded!</string>
    <string name="remove">Remove</string>
    <string name="discard">Discard</string>
    <string name="confirm_discard_profile">Discard profile values? All changes will be lost.</string>
    <string name="confirm_discard_connection">Discard connection values? All changes will be lost.</string>
    <string name="delete_connection">Do you really want to remove the connection \'%s\'?</string>
    <string name="remove_recording">Do you really want to remove the recording \'%s\'?</string>
    <string name="remove_series_recording">Do you really want to remove the series recording \'%s\'? This will remove all scheduled recordings that are affected by this series recording rule.</string>
    <string name="remove_timer_recording">Do you really want to remove the timer recording \'%s\'?</string>
    <string name="remove_all_recordings">Do you really want to remove ALL recordings?</string>
    <string name="cancel_recording">Do you really want to remove the scheduled recording \'%s\'?</string>
    <string name="cancel_all_recordings">Do you really want to remove ALL scheduled recordings?</string>
    <string name="add_title">The title for the recording</string>
    <string name="add_subtitle">The subtitle for the recording</string>
    <string name="add_name">Name for this entry</string>
    <string name="add_recording">Add new recording</string>
    <string name="edit_recording">Edit recording</string>
    <string name="cancel_add_recording">Cancel adding a new recording? All values will be lost.</string>
    <string name="cancel_edit_recording">Cancel editing existing recording? All values will be lost.</string>
    <string name="add_series_recording">Add new series recording</string>
    <string name="add_timer_recording">Add new manual recording</string>
    <string name="edit_series_recording">Edit series recording</string>
    <string name="edit_timer_recording">Edit manual recording</string>
    <string name="activate_recording">Activate recording</string>
    <string name="pref_manage_connections">Manage connections</string>
    <string name="pref_manage_connections_sum">Select your active connection to a TVHeadend server or add, edit or remove connections.</string>
    <string name="pref_connection_details">Connection details</string>
    <string name="pref_connection_wol">Wake on LAN</string>
    <string name="pref_connections">Connections</string>
    <string name="pref_name">Connection name</string>
    <string name="pref_name_sum">Enter a unique name of the connection</string>
    <string name="pref_name_error_empty">The name must not be empty.</string>
    <string name="pref_name_error_invalid">The name must only contain letters, numbers, minus and underscore.</string>
    <string name="pref_selected">Default connection</string>
    <string name="pref_selected_sum">Select to make this the default connection and use it after the application has started.</string>
    <string name="pref_host">Hostname</string>
    <string name="pref_host_sum">Enter the server hostname</string>
    <string name="pref_host_error_empty">The IP-address or hostname must not be empty.</string>
    <string name="pref_host_error_invalid">The IP-address is not valid.</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_sum">Enter the server port</string>
    <string name="pref_port_error_empty">The port number must not be empty.</string>
    <string name="pref_port_error_invalid">The port number is not valid. Specify a number between 1 and 65535.</string>
    <string name="pref_streaming_port">Port for media streaming</string>
    <string name="pref_user">Username</string>
    <string name="pref_user_sum">Enter username</string>
    <string name="pref_pass">Password</string>
    <string name="pref_pass_sum">Enter password</string>
    <string name="pref_res">Resolution</string>
    <string name="pref_res_sum">Specify the maximum resolution that the transcoder shall use.</string>
    <string name="pref_acodec">Audio codec</string>
    <string name="pref_acodec_sum">Define the type of audio that the transcoder shall use.</string>
    <string name="pref_vcodec">Video codec</string>
    <string name="pref_vcodec_sum">Define the type of video that the transcoder shall use.</string>
    <string name="pref_scodec">Subtitle codec</string>
    <string name="pref_scodec_sum">Define the subtitle type that the transcoder shall use.</string>
    <string name="pref_container">Media container</string>
    <string name="pref_container_sum">Define the media container that shall be used to transport the audio and video streams. Matroshka is usually the preferred choice.</string>
    <string name="pref_playback">Playback</string>
    <string name="pref_transcode">Transcode stream</string>
    <string name="pref_transcode_sum">Convert the program or recording into another format during playback. (This must be supported by the TVHeadend server)</string>
    <string name="pref_epg_hours_visible">Hours visible</string>
    <string name="pref_epg_hours_visible_sum">Define how many hours of the program guide shall be shown on one screen. Too many hours will display too many programs and thus clutters the screen and decrease the readability.</string>
    <string name="pref_epg_max_days">Maximum days to show</string>
    <string name="pref_epg_max_days_sum">Define the maxmimum number of days of program guide data that shall be shown.</string>
    <string name="pref_genre_colors_channels">Channels</string>
    <string name="pref_genre_colors_channels_sum">The genre color will be shown as a vertical line on the left side of the channel list screen.</string>
    <string name="pref_genre_colors_programs">Programs</string>
    <string name="pref_genre_colors_programs_sum">The genre color will be shown as a vertical line on the left side of the program lists and the program details screen.</string>
    <string name="pref_genre_colors_epg">Program guide</string>
    <string name="pref_genre_colors_epg_sum">Shows the genre color in the background of each program guide item.</string>
    <string name="pref_genre_colors_search_results">Search results</string>
    <string name="pref_genre_colors_search_results_sum">The genre color will be shown as a vertical line on the left side of the search result list.</string>
    <string name="pref_genre_colors_visibility_message">Set the visibility of the colors. Higher values mean stronger colors.</string>
    <string name="pref_genre_colors_visibility">Genre color visibility</string>
    <string name="pref_genre_colors_visibility_value">%1$d%% visible</string>
    <string name="pref_profiles">Profiles</string>
    <string name="pref_recording_profiles">Recording profiles</string>
    <string name="pref_recording_profiles_sum">Select a profile that the server shall use to record a scheduled program.</string>
    <string name="pref_playback_profiles">Playback profiles</string>
    <string name="pref_playback_profiles_sum">Select a profile that shall be used to play a recorded program.</string>
    <string name="pref_cast_profiles">Cast playback profiles</string>
    <string name="pref_cast_profiles_sum">Select a profile that shall be used to cast a channel or recorded program to a chromecast or similar device.</string>
    <string name="pref_programs">Programs</string>
    <string name="recordings">Recordings</string>
</resources>