<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.tvheadend.tvhclient" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showGenreColorsChannelsPref"
        android:summary="@string/pref_genre_colors_channels_sum"
        android:title="@string/pref_genre_colors_channels" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showGenreColorsProgramsPref"
        android:summary="@string/pref_genre_colors_programs_sum"
        android:title="@string/pref_genre_colors_programs" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showGenreColorsGuidePref"
        android:summary="@string/pref_genre_colors_epg_sum"
        android:title="@string/pref_genre_colors_epg" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showGenreColorsSearchPref"
        android:summary="@string/pref_genre_colors_search_results_sum"
        android:title="@string/pref_genre_colors_search_results" />

    <org.tvheadend.tvhclient.SliderPreference
        android:defaultValue="70"
        android:dialogMessage="@string/pref_genre_colors_visibility_message"
        android:key="showGenreColorsVisibilityPref"
        android:summary="@string/pref_genre_colors_visibility_value"
        android:title="@string/pref_genre_colors_visibility"
        custom:maximumValue="100"
        custom:minimumValue="30" />

</PreferenceScreen>