<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
    	android:name="@string/pref_host"
        android:summary="@string/pref_host_sum"
        android:defaultValue="localhost"
        android:title="@string/pref_host"
        android:key="serverHostPref" />

    <EditTextPreference
        android:name="@string/pref_port"
        android:summary="@string/pref_port_sum"
        android:defaultValue="9982"
        android:inputType="number"
        android:title="@string/pref_port"
        android:key="serverPortPref" />

    <EditTextPreference
        android:name="@string/pref_user"
        android:summary="@string/pref_user_sum"
        android:defaultValue=""
        android:title="@string/pref_user"
        android:key="usernamePref" />

    <EditTextPreference
    	android:name="@string/pref_pass"
        android:summary="@string/pref_pass_sum"
        android:defaultValue=""
        android:title="@string/pref_pass"
        android:key="passwordPref"
        android:password="true" />
        
    <PreferenceCategory
        android:title="@string/pref_playback">
        <EditTextPreference
            android:id="@+id/pref_http_port"
            android:name="@string/pref_http_port"
            android:summary="@string/pref_http_port_sum"
            android:defaultValue="9981"
            android:title="@string/pref_http_port"
            android:key="httpPortPref"
            android:numeric="integer" />
        <CheckBoxPreference 
            android:id="@+id/pref_transcode"
            android:name="@string/pref_transcode"
            android:summary="@string/pref_transcode_sum"
            android:defaultValue="true"
            android:title="@string/pref_transcode"
            android:key="transcodePref" />
        <CheckBoxPreference 
            android:id="@+id/pref_external"
            android:name="@string/pref_external"
            android:summary="@string/pref_external_sum"
            android:defaultValue="true"
            android:title="@string/pref_external"
            android:key="externalPref" 
        />
        <ListPreference
            android:name="@string/pref_container"
            android:summary="@string/pref_container_sum"
            android:defaultValue="matroska"
            android:title="@string/pref_container"
            android:key="containerPref"
            android:dialogTitle="@string/pref_container"
            android:dependency="externalPref"
            android:entries="@array/pref_container_list_display"
            android:entryValues="@array/pref_container_list" />
        <ListPreference
            android:name="@string/pref_res"
            android:summary="@string/pref_res_sum"
            android:defaultValue="384"
            android:title="@string/pref_res"
            android:key="resolutionPref"
            android:dialogTitle="@string/pref_res"
            android:dependency="transcodePref"
            android:entries="@array/pref_res_list_display"
            android:entryValues="@array/pref_res_list" />
        <ListPreference
            android:name="@string/pref_acodec"
            android:summary="@string/pref_acodec_sum"
            android:defaultValue="AAC"
            android:title="@string/pref_acodec"
            android:key="acodecPref"
            android:dialogTitle="@string/pref_acodec"
            android:dependency="transcodePref"
            android:entries="@array/pref_acodec_list_display"
            android:entryValues="@array/pref_acodec_list" />
        <ListPreference
            android:name="@string/pref_vcodec"
            android:summary="@string/pref_vcodec_sum"
            android:defaultValue="H264"
            android:title="@string/pref_vcodec"
            android:key="vcodecPref"
            android:dialogTitle="@string/pref_vcodec"
            android:dependency="transcodePref"
            android:entries="@array/pref_vcodec_list_display"
            android:entryValues="@array/pref_vcodec_list" />
    </PreferenceCategory>  
</PreferenceScreen>