<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.tvheadend.tvhclient" >

    <PreferenceCategory android:title="@string/pref_casting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_enable_casting"
            android:summary="@string/pref_enable_casting_sum"
            android:title="@string/pref_enable_casting" />

        <ListPreference
            android:name="@string/pref_cast_profiles"
            android:dependency="pref_enable_casting"
            android:dialogTitle="@string/pref_cast_profiles"
            android:key="pref_cast_profiles"
            android:summary="@string/pref_cast_profiles_sum"
            android:title="@string/pref_cast_profiles"
            android:visible="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_enable_casting"
            android:key="pref_show_cast_minicontroller"
            android:summary="@string/pref_show_cast_minicontroller_sum"
            android:title="@string/pref_show_cast_minicontroller" />

<!--         <CheckBoxPreference -->
<!--             android:defaultValue="false" -->
<!--             android:key="pref_show_cast_program_duration" -->
<!--             android:summary="@string/pref_pref_show_cast_program_duration_sum" -->
<!--             android:title="@string/pref_pref_show_cast_program_duration" /> -->
    </PreferenceCategory>

</PreferenceScreen>