<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.tvheadend.tvhclient" >

    <PreferenceCategory
        android:title="@string/pref_profiles">
	    <ListPreference
	        android:name="@string/pref_recording_profiles"
	        android:dialogTitle="@string/pref_recording_profiles"
	        android:key="pref_recording_profiles"
	        android:persistent="false"
	        android:summary="@string/pref_recording_profiles_sum"
	        android:title="@string/pref_recording_profiles"
	        android:visible="false" />
	    <ListPreference
	        android:name="@string/pref_playback_profiles"
	        android:dialogTitle="@string/pref_playback_profiles"
	        android:key="pref_playback_profiles"
	        android:persistent="false"
	        android:summary="@string/pref_playback_profiles_sum"
	        android:title="@string/pref_playback_profiles"
	        android:visible="false" />
    </PreferenceCategory>

</PreferenceScreen>